<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina4_7" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="TTADataPickerViewDemo" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="center" spacing="50" translatesAutoresizingMaskIntoConstraints="NO" id="0Zp-gp-tnM">
                                <rect key="frame" x="112.5" y="50" width="150.5" height="462"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TTADataPickerView" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ntm-Cp-5M0">
                                        <rect key="frame" x="0.0" y="0.0" width="150.5" height="35.5"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="heJ-3y-gYS">
                                        <rect key="frame" x="0.0" y="85.5" width="150.5" height="35"/>
                                        <state key="normal" title="Text"/>
                                        <connections>
                                            <action selector="showTextType:" destination="BYZ-38-t0r" eventType="touchUpInside" id="MSG-So-43R"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9N2-cJ-vGl">
                                        <rect key="frame" x="0.0" y="170.5" width="150.5" height="35.5"/>
                                        <state key="normal" title="Text With AutoReset"/>
                                        <connections>
                                            <action selector="showTextWithAutoResetType:" destination="BYZ-38-t0r" eventType="touchUpInside" id="qVN-pI-qil"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kLU-XS-swz">
                                        <rect key="frame" x="0.0" y="256" width="150.5" height="35.5"/>
                                        <state key="normal" title="Date"/>
                                        <connections>
                                            <action selector="showDateType:" destination="BYZ-38-t0r" eventType="touchUpInside" id="g5U-NM-fwL"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Joa-b7-Lm0">
                                        <rect key="frame" x="0.0" y="341.5" width="150.5" height="35"/>
                                        <state key="normal" title="Time"/>
                                        <connections>
                                            <action selector="showTimeType:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ZXd-rt-ajA"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FyK-Xb-BdK">
                                        <rect key="frame" x="0.0" y="426.5" width="150.5" height="35.5"/>
                                        <state key="normal" title="DateTime"/>
                                        <connections>
                                            <action selector="showDateTimeType:" destination="BYZ-38-t0r" eventType="touchUpInside" id="YNN-bw-WQv"/>
                                        </connections>
                                    </button>
                                </subviews>
                                <constraints>
                                    <constraint firstItem="FyK-Xb-BdK" firstAttribute="top" secondItem="Joa-b7-Lm0" secondAttribute="bottom" constant="50" id="07I-G5-oyq"/>
                                    <constraint firstItem="Joa-b7-Lm0" firstAttribute="top" secondItem="kLU-XS-swz" secondAttribute="bottom" constant="50" id="0ns-AQ-Vdj"/>
                                    <constraint firstItem="heJ-3y-gYS" firstAttribute="leading" secondItem="9N2-cJ-vGl" secondAttribute="leading" id="412-9M-Mjm"/>
                                    <constraint firstItem="Joa-b7-Lm0" firstAttribute="leading" secondItem="FyK-Xb-BdK" secondAttribute="leading" id="C9g-OD-rvo"/>
                                    <constraint firstItem="Ntm-Cp-5M0" firstAttribute="leading" secondItem="heJ-3y-gYS" secondAttribute="leading" id="Dm3-5F-wbo"/>
                                    <constraint firstItem="9N2-cJ-vGl" firstAttribute="leading" secondItem="kLU-XS-swz" secondAttribute="leading" id="Jqn-zI-1aj"/>
                                    <constraint firstItem="kLU-XS-swz" firstAttribute="top" secondItem="9N2-cJ-vGl" secondAttribute="bottom" constant="50" id="LMO-Jz-yMt"/>
                                    <constraint firstItem="9N2-cJ-vGl" firstAttribute="top" secondItem="heJ-3y-gYS" secondAttribute="bottom" constant="50" id="VQK-g5-6PH"/>
                                    <constraint firstItem="kLU-XS-swz" firstAttribute="leading" secondItem="Joa-b7-Lm0" secondAttribute="leading" id="q6n-qG-QzJ"/>
                                </constraints>
                            </stackView>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <constraints>
                            <constraint firstItem="0Zp-gp-tnM" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="30" id="56n-9Z-nBZ"/>
                            <constraint firstItem="0Zp-gp-tnM" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Eh8-IP-32h"/>
                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="0Zp-gp-tnM" secondAttribute="bottom" constant="155" id="VJw-MF-Ytt"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="showLabel" destination="Ntm-Cp-5M0" id="ezU-dU-I0y"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1" y="-27"/>
        </scene>
    </scenes>
</document>
